2010-02-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Use boost.m4 from http://github.com/tsuna/boost.m4/raw/master/build-aux/boost.m4.

2009-09-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/boost.m4: Fix for autoconf 2.64 (see also
	http://lists.gnu.org/archive/html/bug-autoconf/2009-08/msg00054.html).

2009-08-25  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/RacerExtAtom.tcc: No longer caching role queries.
	* src/RacerInterface.cpp: Returning 0 instead of not specifying
	return value.

2009-08-25  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/DFProcessor.h: Ignoring comments in DFProcessor.h instead
	of deleting them in DFConverter. This fixes issues with % characters
	in string literals.
	* include/DFConverter.h: Likewise.
	* src/DFConverter.cpp: Likewise.

	* examples/wires3.dlp: Updated to changed #namespace syntax of dlvhex.
	* examples/test.dlp: Likewise.
	* examples/shop-inconsistent.dlp: Likewise.
	* examples/ucq.dlp: Likewise.
	* examples/shop.dlp: Likewise.
	* examples/wires2.hex: Likewise.
	* examples/shop+test.dlp: Likewise.

	* m4/boost.m4: Updating boost.m4 to version currently used in dlvhex.

	* testsuite/TestDLRewriter.cpp: Fixing testsuite compilation.
	* testsuite/TestSuite.cpp: Likewise.

	* include/DFOutputBuilder: Fixed compiler warning.

2009-03-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Add todo item.

	* COPYING: New file.

2009-01-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/RacerInterface.cpp: Remove debug output.

	* src/Answer.cpp: Fix g++4.3 compile errors by #include missing
	headers, see <http://gcc.gnu.org/gcc-4.3/porting_to.html>.
	* src/RacerNRQLBuilder.cpp: Likewise.
	* src/TCPStream.cpp: Likewise.
	* src/Terms.cpp: Likewise.

2008-12-15  DAO Tran Minh  <dao@kr.tuwien.ac.at>

	* include/DFOutputBuilder.h: New file.
	* src/DFOutputBuilder.cpp: Likewise.

	* src/DFConverter.cpp: Add hasDefaults().
	* src/DFProcessor.cpp: Likewise.
